# polisi2

./: .gitignore  RAG_best_practices.md  Scraper-Guide.md  deploy.sh  infrastructure.md  polisidesign.pen  redeploy.sh  scraper-merger-plan.md
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md
api/: .env.example  README.md  pyproject.toml
api/src/polisi_api/: __init__.py  auth.py  config.py  dependencies.py  main.py  models.py  ratelimit.py
api/src/polisi_api/chat/: __init__.py  datagov.py  detector.py  feedback.py  file_processor.py  prompting.py  query_expansion.py  reformulation.py  repository.py  reranker.py  retrieval.py  service.py  skills.py
api/src/polisi_api/routes/: chat.py  conversations.py  feedback.py  skills.py  usage.py
api/tests/: test_app_contracts.py  test_chat_service.py  test_conversation_routes.py  test_datagov.py  test_detector.py  test_file_processor.py  test_prompting.py  test_ratelimit.py  test_reranker.py  test_retrieval.py  test_skills.py
infra/droplet/: RUNBOOK.md  env.example  install_playwright.sh  setup_runtime.sh
scraper/: .env.example  MERGER_PROGRESS.md  README.md  pyproject.toml
scraper/config/: sites.yml
scraper/configs/: bheuu.yaml  data_gov_my.yaml  dewan_johor.yaml  dewan_selangor.yaml  dosm.yaml  idfr.yaml  kpkt.yaml  mcmc.yaml  moe.yaml  mof.yaml  moh.yaml  mohe.yaml  parlimen.yaml  perpaduan.yaml  rmp.yaml
scraper/scripts/: embed_local_pdf.py  index_datagov_batch.py  index_datagov_metadata.py  live_dry_run.py  preflight_check.py  query_smoke.py  run_full_pipeline.sh  scrape_data_gov_my.py  smoke_crawl.py
scraper/src/polisi_scraper/: __init__.py  cli.py  config.py  models.py  runner.py
scraper/src/polisi_scraper/adapters/: __init__.py  base.py  bheuu.py  data_gov_my.py  dewan_johor.py  dewan_selangor.py  dosm.py  idfr.py  jpa.py  kpkt.py  mcmc.py  moe.py  mof.py  moh.py  mohe.py  parlimen.py  perpaduan.py  registry.py  rmp.py
scraper/src/polisi_scraper/core/: __init__.py  browser.py  dates.py  dedup.py  extractors.py  http_client.py  spaces.py  state_store.py  urls.py
scraper/src/polisi_scraper/indexer/: __init__.py  chunking.py  contextual.py  embeddings.py  manifest.py  pipeline.py  runner.py  state.py  store.py
scraper/src/polisi_scraper/indexer/parsers/: __init__.py  base.py  csv_parser.py  docx.py  html.py  pdf.py  xlsx.py
scraper/tests/: conftest.py  test_adapters_smoke.py  test_chunking.py  test_config_and_models.py  test_contextual.py  test_dedup_and_state.py  test_indexer_manifest.py  test_indexer_parsers.py  test_indexer_pipeline.py
scraper/tests/adapters/: test_bheuu.py  test_dewan_johor.py  test_dewan_selangor.py  test_idfr.py  test_kpkt.py  test_mcmc.py  test_moe.py  test_moh.py  test_mohe.py  test_perpaduan.py  test_rmp.py
scraper/tests/core/: test_browser.py  test_dates.py  test_extractors.py  test_urls.py
scraper/tests/fixtures/bheuu/: act_archive.json  act_law_nav_only.json  media_statement.json  newspaper_clip.json
scraper/tests/fixtures/dewan_johor/: wpdm_multi_file_page.html
scraper/tests/fixtures/dewan_selangor/: equans_listing.html  hansard_session_pdfs.html  penyata_rasmi_index.html  post_sitemap.xml  wp_post_berita.html
scraper/tests/fixtures/idfr/: article_body_listing.html  press_listing.html  publications_hub.html
scraper/tests/fixtures/kpkt/: piagam_pelanggan.html  siaran_media_pattern_b.html
scraper/tests/fixtures/mcmc/: dispute_resolution.html  publications_listing.html
scraper/tests/fixtures/moh/: listing_last_page.html
scraper/tests/fixtures/rmp/: listing_empty.html  listing_last_page.html  listing_publications.html
scraper/tests/integration/: test_download_detection.py  test_dry_run.py
specific-scrapers/bheuu-scraper/: .env.example  RUNBOOK.md  conftest.py  pyproject.toml
specific-scrapers/bheuu-scraper/configs/: bheuu.yaml
specific-scrapers/bheuu-scraper/src/bheuu_scraper/: __init__.py  archiver.py  cli.py  crawler.py  extractor.py  models.py  pipeline.py  state.py
specific-scrapers/bheuu-scraper/tests/: test_dates.py  test_extractor.py  test_pipeline.py  test_state.py  test_urls.py
specific-scrapers/bheuu-scraper/tests/fixtures/: act_law_with_pdf.json  annual_report.json
specific-scrapers/dewan-johor-scraper/: RUNBOOK.md  pyproject.toml
specific-scrapers/dewan-selangor-scraper/: .env.example  .gitignore  RUNBOOK.md  conftest.py  pyproject.toml
specific-scrapers/idfr-scraper/: .env.example  RUNBOOK.md  conftest.py  pyproject.toml
specific-scrapers/idfr-scraper/configs/: idfr.yaml
specific-scrapers/idfr-scraper/src/idfr_scraper/: cli.py  crawler.py  extractor.py  models.py  pipeline.py  state.py
specific-scrapers/idfr-scraper/tests/: test_dates.py  test_extractor.py  test_state.py  test_urls.py
specific-scrapers/idfr-scraper/tests/fixtures/: speeches_listing.html
specific-scrapers/kpkt-scraper/: .env.example  .gitignore  RUNBOOK.md  (+1 more)
specific-scrapers/mohe-scraper/: .env.example  PROJECT_SUMMARY.md  README.md  RUNBOOK.md  SETUP.sh  pyproject.toml
specific-scrapers/mohe-scraper/configs/: mohe_site_config.yaml
specific-scrapers/mohe-scraper/scripts/: test_live_feed.py
specific-scrapers/mohe-scraper/src/mohe_scraper/: __init__.py  cli.py  crawler.py  models.py  parsers.py  state_manager.py  storage.py  url_utils.py
specific-scrapers/mohe-scraper/tests/: fixtures.py  test_integration.py  test_parsers.py  test_state_manager.py  test_url_utils.py
specific-scrapers/perpaduan-scraper/: .env.example  .gitignore  COMMANDS.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  RUNBOOK.md  SELECTOR_TUNING.md  pyproject.toml
specific-scrapers/perpaduan-scraper/configs/: perpaduan.yaml
specific-scrapers/perpaduan-scraper/src/: __init__.py  crawler.py  deduplication.py  main.py  models.py  scraper.py  spaces.py  url_utils.py
specific-scrapers/perpaduan-scraper/tests/: __init__.py  test_deduplication.py  test_models.py  test_url_utils.py
web/: .env.example  middleware.ts  package-lock.json  package.json  vercel.json  vitest.config.ts
(+197 files in other folders)
