[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polisi-api"
version = "0.1.0"
description = "PolisiGPT product API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "anthropic==0.49.0",
  "fastapi==0.115.12",
  "psycopg[binary]==3.2.13",
  "pydantic==2.11.1",
  "pydantic-settings==2.8.1",
  "PyJWT[crypto]==2.10.1",
  "uvicorn[standard]==0.34.0",
  "pytest==8.3.5",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
