[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polisi-scraper"
version = "0.1.0"
description = "PolisiGPT government document scraping pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "requests==2.32.3",
  "beautifulsoup4==4.12.3",
  "playwright==1.51.0",
  "boto3==1.37.7",
  "openai==1.68.2",
  "psycopg[binary]==3.2.13",
  "pypdf==5.4.0",
  "python-docx==1.1.2",
  "openpyxl==3.1.5",
  "pydantic==2.11.1",
  "pytest==8.3.5",
  "PyYAML==6.0.2"
]

[project.scripts]
polisi-scraper = "polisi_scraper.runner:main"
polisi-indexer = "polisi_scraper.indexer.runner:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
